adding topics to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ build
 /Topics/Exception handling/Catching some exceptions/out/production/classes/
 /Topics/Recursion/Fix the method to print strings in the reverse order/out/
 /Topics/Recursion/Fix the method to print strings in the reverse order/out/production/classes/
+/Topics/
